# olive-ai

./: README.md  auth.config.ts  env.example.txt  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.js  test-google-cloud.js
backend/: .dockerignore  .gitignore  Caddyfile  Dockerfile  Makefile  alembic.ini  custom_langchain.py  custom_telephony_server.py  docker-compose-deploy.yml  docker-compose.supabase.yml  docker-compose.yml  llama_monkey_patch.py  main.py  pyproject.toml  run.sh
backend/docker/beat/: Dockerfile
backend/docker/server/: Dockerfile
backend/docker/worker/: Dockerfile
backend/migrations/: env.py
backend/migrations/functions/: id_generator.sql  supabase_user_sync.sql
backend/migrations/versions/: 2024_07_17_1459-5ef9c0e64733_.py  2024_07_17_1730-afee87188d2e_.py  2024_07_17_1731-34dfab535ccf_.py  2024_07_18_0054-ff86ed6ad9f0_.py  2024_07_19_0108-6e2fdb99b04d_.py  2024_07_19_0113-84c460d123b0_.py  2024_07_19_0121-9cce625057df_.py  2024_07_21_0214-86947956f5ca_.py  2024_07_22_1324-94698768b7c1_.py  2024_07_23_1129-7cf29dd61f2c_.py  2024_07_23_1356-c06b5cec40cc_.py  2024_07_24_0214-c3100f485556_.py
backend/scripts/: init.sh  run.sh
backend/src/: celeryworker.py  config.py  custom_agent.py  custom_event_manager.py  custom_synth.py  custom_telephony_server.py  llama_monkey_patch.py  log.py  run_celery_beat.py  run_celery_worker.py  run_gunicorn.py  run_uvicorn.py  server.py
backend/src/actions/: __init__.py  remark.py
backend/src/auth/: __init__.py  auth.py
backend/src/constants/: __init__.py  call.py  campaign.py  customer_set.py  pagination.py  user.py
backend/src/exceptions/: __init__.py  base.py  client.py  database.py  handlers.py
backend/src/jobs/: __init__.py  call.py  tasks.py
backend/src/models/: __init__.py  agent.py  audit.py  base.py  call.py  campaign.py  campaign_customer_set.py  customer.py  customer_set.py  db.py  organization.py  synthesizer.py  telephony_service.py  transcriber.py  user.py
backend/src/repositories/: __init__.py  agent.py  base.py  call.py  campaign.py  campaign_customer_set.py  customer.py  customer_set.py  organization.py  synthesizer.py  telephony_service.py  transcriber.py  user.py
backend/src/resources/: agent.py  auth.py  call.py  campaign.py  customer.py  customer_set.py  health.py  organization.py  outbound_call.py  synthesizer.py  telephony_service.py  transcriber.py
backend/src/schemas/: __init__.py  agent.py  auth.py  base.py  call.py  campaign.py  campaign_customer_set.py  customer.py  customer_set.py  error.py  health.py  organization.py  synthesizer.py  telephony_service.py  transcriber.py  user.py
backend/src/util/: asyncio.py  config_manager.py  s3.py  security_headers.py  telephony_server.py
backend/streaming/models/: telephony.py
backend/streaming/output_device/: exotel_output_device.py
backend/streaming/telephony/: constants.py
(+128 files in other folders)
